[package]
name = "loginus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3.30"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8.5"
sha2 = "0.10"
thiserror = "1.0.60"
